feat(member) detailler

--- a/src/app/features/mandat/components/phase-form-item/phase-form-item.component.html
+++ b/src/app/features/mandat/components/phase-form-item/phase-form-item.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="phaseForm" class="phase-item-card">
   <div class="form-group">
     <label [for]="'phaseName' + index">Nom de la phase</label>
-    <input [id]="'phaseName' + index" type="text" formControlName="nom">
+    <input [id]="'phaseName' + index" formControlName="nom" type="text">
     <div *ngIf="phaseForm.get('nom')?.invalid && phaseForm.get('nom')?.touched" class="error-message">
       Le nom de la phase est requis.
     </div>
@@ -9,7 +9,7 @@
 
   <div class="form-group">
     <label [for]="'phaseStartDate' + index">Date de début</label>
-    <input [id]="'phaseStartDate' + index" type="date" formControlName="dateDebut">
+    <input [id]="'phaseStartDate' + index" formControlName="dateDebut" type="date">
     <div *ngIf="phaseForm.get('dateDebut')?.invalid && phaseForm.get('dateDebut')?.touched" class="error-message">
       La date de début est requise.
     </div>
@@ -17,7 +17,7 @@
 
   <div class="form-group">
     <label [for]="'phaseEndDate' + index">Date de fin</label>
-    <input [id]="'phaseEndDate' + index" type="date" formControlName="dateFin">
+    <input [id]="'phaseEndDate' + index" formControlName="dateFin" type="date">
     <div *ngIf="phaseForm.get('dateFin')?.invalid && phaseForm.get('dateFin')?.touched" class="error-message">
       La date de fin est requise.
     </div>
@@ -25,13 +25,13 @@
 
   <div class="form-group">
     <label [for]="'inscriptionStartDate' + index">Date de début d'inscription (optionnel)</label>
-    <input [id]="'inscriptionStartDate' + index" type="date" formControlName="dateDebutInscription">
+    <input [id]="'inscriptionStartDate' + index" formControlName="dateDebutInscription" type="date">
   </div>
 
   <div class="form-group">
     <label [for]="'inscriptionEndDate' + index">Date de fin d'inscription (optionnel)</label>
-    <input [id]="'inscriptionEndDate' + index" type="date" formControlName="dateFinInscription">
+    <input [id]="'inscriptionEndDate' + index" formControlName="dateFinInscription" type="date">
   </div>
 
-  <button type="button" class="delete-button" (click)="onDelete()">Supprimer</button>
+  <button (click)="onDelete()" class="delete-button" type="button">Supprimer</button>
 </div>
