--- a/src/app/features/mandat/components/phase-form-item/phase-form-item.component.scss
+++ b/src/app/features/mandat/components/phase-form-item/phase-form-item.component.scss
@@ -59,6 +59,7 @@
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
-      background-color: $danger-500    }
+      background-color: $danger-500
+    }
   }
 }
