--- a/src/app/features/mandat/pages/mandat-list/mandat-list.component.scss
+++ b/src/app/features/mandat/pages/mandat-list/mandat-list.component.scss
@@ -30,20 +30,29 @@
 .btn-primary {
   background-color: $primary-500;
   color: $color-text-on-primary;
-  &:hover { background-color: $primary-600; }
+
+  &:hover {
+    background-color: $primary-600;
+  }
 }
 
 .btn-secondary {
   background-color: $gray-200;
   color: $color-text-primary;
   border: 1px solid $color-border-default;
-  &:hover { background-color: $gray-300; }
+
+  &:hover {
+    background-color: $gray-300;
+  }
 }
 
 .btn-danger {
   background-color: $danger-500;
   color: $white;
-  &:hover { background-color: darken($danger-500, 10%); }
+
+  &:hover {
+    background-color: darken($danger-500, 10%);
+  }
 }
 
 .page-content {
@@ -98,6 +107,7 @@
         background-color: lighten($success-base, 45%);
         color: darken($success-base, 10%);
       }
+
       &.inactive {
         background-color: $gray-200;
         color: $gray-600;
@@ -119,6 +129,7 @@
         margin-right: $space-2;
       }
     }
+
     .mandate-period {
       margin-bottom: $space-3;
     }
@@ -145,23 +156,32 @@
     border-radius: $radius-sm;
     animation: pulse 1.5s infinite ease-in-out;
   }
+
   .title {
     height: 2.8rem;
     width: 70%;
     margin-bottom: $space-4;
   }
+
   .text {
     height: 1.6rem;
     width: 90%;
     margin-bottom: $space-2;
   }
+
   .short {
     width: 50%;
   }
 }
 
 @keyframes pulse {
-  0% { opacity: 1; }
-  50% { opacity: 0.5; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
 }
